Fix not accessible module